--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,16 +33,23 @@
 variables:
   configuration: debug
   platform: x64
-steps:
+jobs:
+- job: job1
+  steps:
 # Use them once
-- task: MSBuild@1
-  inputs:
-    solution: solution1.sln
-    configuration: $(configuration) # Use the variable
-    platform: $(platform)
+  - task: MSBuild@1
+    inputs:
+      solution: solution1.sln
+      configuration: $(configuration) # Use the variable
+      platform: $(platform)
 # Use them again
-- task: MSBuild@1
-  inputs:
-    solution: solution2.sln
-    configuration: $(configuration) # Use the variable
-    platform: $(platform)
+  - task: MSBuild@1
+    inputs:
+      solution: solution2.sln
+      configuration: $(configuration) # Use the variable
+      platform: $(platform)
+- job: job2
+  steps:
+  - bash: echo $(global_variable)
+  - bash: echo $(job_variable2)
+  - bash: echo $GLOBAL_VARIABLE
